syntax = "proto3";

package fort.myrmidon.pb;

import "google/protobuf/timestamp.proto";

import "Shapes.proto";

message Identification {
    int32                     ID      = 1;
	google.protobuf.Timestamp Start   = 2;
	google.protobuf.Timestamp End     = 3;
	double                    TagSize = 4;
};

// message Metadata {
// 	string JSONData        = 1;
// 	uint64 StartValidFrame = 2;
// };

message Color {
	uint32 R = 1;
	uint32 G = 2;
	uint32 B = 3;
};

enum AntDisplayState {
	VISIBLE = 0;
	HIDDEN  = 1;
	SOLO    = 2;
};

message AntShape {
	Capsule capsule = 1;
	uint32  type    = 2;
};



message AntStaticValue {
	enum Type {
		BOOL   = 0;
		INT    = 1;
		DOUBLE = 2;
		STRING = 3;
		TIME   = 4;
	};

	Type                      type        = 1;
	bool                      boolValue   = 2;
	int32                     intValue    = 3;
	double                    doubleValue = 4;
	string                    stringValue = 5;
	google.protobuf.Timestamp timeValue   = 6;
};

message AntNamedValue {
	google.protobuf.Timestamp time  = 1;
	AntStaticValue            value = 2;
	string                    name  = 3;
};

message AntDescription {
	int32                   ID              = 1;
	repeated AntShape       shape           = 2;
	repeated Identification identifications = 3;
	Color                   color           = 4;
	AntDisplayState         displayState    = 5;

	repeated AntNamedValue  namedValues     = 6;
};
